my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENTMPL/ENTMPL.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENTMPL.dml:13:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENTMPL.dml:7:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENTMPL.dml:10:4: error ENTMPL: unknown template: 'asdf'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENTMPL.dml:31:4: In template y
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENTMPL.dml:29:8: error ENTMPL: unknown template: 'hjkl'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENTMPL.dml:22:1: In p
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENTMPL.dml:24:8: error ENTMPL: unknown template: 'zxcv'
